--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/drawer": "^7.3.2",
-    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/core": "^6.4.17",
+    "@react-navigation/drawer": "^7.3.4",
+    "@react-navigation/native": "^7.1.1",
+    "@react-navigation/stack": "^7.2.5",
     "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.1",
